[incubator-kie-issues#1112] WIP